deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-deployment
  namespace: samplefluxconfig
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-app
  template:
    metadata:
      labels:
        app: web-app
    spec:
      serviceAccountName: flux-applier
      containers:
      - name: webserver-simple
        image: image-registry.openshift-image-registry.svc:5000/mw-eap/jboss-eap74-custom:sha256:7903e6fbc45d4d56f6fbe998fbe5644f4ede6c06eddc753115de258d87bd06b4
        ports:
        - containerPort: 8080
