route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: simple-route
spec:
  path: /amr
  to:
    kind: Service
    name: simple-service
  port:
    targetPort: 8080
